--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,6 +14,16 @@ $gold: #C9A962;
 $gold-light: #D4BC7B;
 $gold-dark: #A8893F;
 
+// === ROSE GLOSSY (inspiré du logo Taste & Drink) ===
+$pink-glossy: #D4A5AD;
+$pink-glossy-light: #E8C4CA;
+$pink-glossy-dark: #B88A92;
+
+// === LIE DE VIN (logo icône) ===
+$lie-de-vin: #5D2A32;
+$lie-de-vin-light: #7A3A44;
+$lie-de-vin-dark: #431E24;
+
 // === COULEURS SECONDAIRES ===
 $wine-red: #722F37;
 $wine-burgundy: #4A1C24;
