--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
     <%# === NAVBAR (fixe en haut) === %>
     <%= render "shared/navbar" %>
 
+    <%# === WATERMARK BACKGROUND (Logo Lie de Vin en transparence) === %>
+    <div class="td-watermark-bg"></div>
+
     <%# === FLASH MESSAGES === %>
     <%= render "shared/flashes" %>
 
