like dislike codé

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,14 @@
         <small class="text-muted">Diet</small>
         <div><%= @user.diet %></div>
       </div>
+      <div class="mb-3">
+        <small class="text-muted">Like</small>
+        <div><%= @user.like %></div>
+      </div>
+      <div class="mb-3">
+        <small class="text-muted">Dislike</small>
+        <div><%= @user.dislike %></div>
+      </div>
     </div>
   </div>
 
